--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ bin-release/
 
 # Suroy
 *.bak
+.DS_Store
+*.DS_Store
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
