重新编译、支持远程控制、支持唤醒APP

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ bin-release/
 # Suroy
 *.bak
 .DS_Store
-*.DS_Store
+*/.DS_Store
+Edition/
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
