重新编译、支持远程控制、支持唤醒APP

--- a/.vscode/.gitignore
+++ b/.vscode/.gitignore
@@ -18,7 +18,7 @@ bin-release/
 .DS_Store
 */.DS_Store
 Edition/
-.vscode/*
+!.vscode/*
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
